app-salesforce-logs/main/default/objects/LogEvent__c/fields/Log_Data__c.field-meta.xml
<CustomField>
    <fullName>Log_Data__c</fullName>
    <label>Log Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>