app-salesforce-logs/main/default/objects/LogEvent__c/fields/LogData__c.field-meta.xml
<CustomField>
    <fullName>LogData__c</fullName>
    <label>Log Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>