app-salesforce-logs/main/default/objects/LogEvent__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>LogEvent__c</referenceTo>
    <relationshipLabel>Log Events</relationshipLabel>
    <relationshipName>Log_Events</relationshipName>
    <type>Lookup</type>
</CustomField>