app-salesforce-logs/main/default/objects/LogEvent__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>