app-salesforce-logs/main/default/objects/LogEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RequestId__c</columns>
    <columns>Parent__c</columns>
    <columns>Quiddity__c</columns>
    <columns>Tag__c</columns>
    <columns>Severity__c</columns>
    <columns>LogData__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>