app-salesforce-logs/main/default/objects/LogEvent__c/listViews/Error.listView-meta.xml
<ListView>
    <fullName>Error</fullName>
    <columns>NAME</columns>
    <columns>Request_Id__c</columns>
    <columns>Parent__c</columns>
    <columns>Quiddity__c</columns>
    <columns>Tag__c</columns>
    <columns>Severity__c</columns>
    <columns>Log_Data__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>Error</label>
</ListView>