app-salesforce-logs/main/default/objects/LogEvent__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>RequestId__c</columns>
    <columns>Parent__c</columns>
    <columns>Quiddity__c</columns>
    <columns>Tag__c</columns>
    <columns>Severity__c</columns>
    <columns>LogData__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>